ELS Code/main/default/objects/Trade_Show__c/Trade_Show__c.object-meta.xml
<CustomObject>
    <label>Trade Show</label>
    <nameField>
        <displayFormat>TD-{00000000}</displayFormat>
        <label>Trade Show Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TradeShows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>