ELS Code/main/default/objects/Trade_Show__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>225</length>
    <type>Text</type>
</CustomField>