ELS Code/main/default/objects/Trade_Show__c/fields/LAZ__c.field-meta.xml
<CustomField>
    <fullName>LAZ__c</fullName>
    <formula>MID(  Last_Name__c , 0, 6) &amp; MID(  Address__c , 0, 9) &amp; MID(  Zip__c , 0, 5)</formula>
    <label>LAZ</label>
    <type>Text</type>
</CustomField>