ELS Code/main/default/objects/Trade_Show__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <label>Source ID</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>