ELS Code/main/default/objects/Trade_Show__c/fields/Tradeshow_ID__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow_ID__c</fullName>
    <label>Tradeshow ID</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>